test/conformance/chainsaw/mutating-policies/context/api-call/http-post/patched-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: test-pod
  labels:
    app: demo
    env: demo  # This label should be added by the mutating policy
spec:
  containers:
    - name: pause
      image: registry.k8s.io/pause:latest
