test/conformance/chainsaw/mutating-policies/context/api-call/http-post/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: test-pod
  labels:
    app: demo
spec:
  containers:
    - name: pause
      image: registry.k8s.io/pause:latest
      resources:
        requests:
          cpu: 10m
          memory: 10Mi
        limits:
          cpu: 10m
          memory: 10Mi
  terminationGracePeriodSeconds: 0
