test/conformance/chainsaw/mutating-policies/context/api-call/http-post/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: MutatingPolicy
metadata:
  name: mpol-http-get
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: [v1]
        operations: [CREATE, UPDATE]
        resources: [pods]
  variables:
    - name: apiResponse
      expression: >-
        http.Post("http://test-api-service.default.svc.cluster.local:80", {"key": "value"}, {"Content-Type": "application/json"})
    - name: envLabel
      expression: >-
        has(variables.apiResponse) && has(variables.apiResponse.metadata) && has(variables.apiResponse.metadata.labels) && 'postLabel' in variables.apiResponse.metadata.labels ? variables.apiResponse.metadata.labels.app : 'unknown'
  mutations:
    - patchType: ApplyConfiguration
      applyConfiguration:
        expression: >-
          Object{
            metadata: Object.metadata{
              labels: Object.metadata.labels{
                postLabel: variables.envLabel
              }
            }
          }
