test/conformance/chainsaw/mutating-policies/context/api-call/http-post/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mpol-http-post
spec:
  concurrent: false
  steps:
  - name: setup-http-service
    try:
    - apply:
        file: http-pod.yaml
    - apply:
        file: service.yaml
    - assert:
        timeout: 120s
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: test-api
            namespace: default
          status:
            (conditions[?type == 'Ready']):
            - status: "True"
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-mutating-policy-ready
    use:
      template: ../../../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: mpol-http-post
  - name: sleep
    try:
    - sleep:
        duration: 5s
  - name: test-mutation
    try:
    - create:
        file: pod.yaml
    - assert:
        timeout: 30s
        file: patched-pod.yaml
